fixing spacing issue with links

--- a/dev/styles/partials/_typography.scss
+++ b/dev/styles/partials/_typography.scss
@@ -27,6 +27,7 @@ a {
   border-bottom: 2px solid $color;
   color: #000;
   padding: 0 3px;
+  margin-left: 2px;
 
   &:hover { color: #fff; }
 
