--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -19,7 +19,8 @@ a {
 #main a {
   border-bottom: 2px solid #950147;
   color: #000;
-  padding: 0 3px; }
+  padding: 0 3px;
+  margin-left: 2px; }
   #main a:hover {
     color: #fff; }
   #main a.btn.cta {
